# screenshot-to-react-component

./: .gitignore  README.md  pyproject.toml
nextjs-project/: README.md
nextjs-project/src/: package-lock.json
nextjs-project/src/components/: SearchBar.tsx
nextjs-project/src/pages/: index.tsx
notes/: screenshot_to_code.ipynb  screenshot_to_react_component.ipynb
notes/output/: youtube_screenshot.html
src/: llm.py  main.py  prompt.py  utils.py
